[package]
name = "lab_optimistic_lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "postgres",
] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
uuid = { workspace = true, features = ["v4"] }
byteorder = "1.5.0"

[dev-dependencies]
test-context = { workspace = true }
